--- a/autor.html
+++ b/autor.html
@@ -10,12 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
-    <link rel="icon" href="img/fenixpvsvektor.svg">
+    <link rel="icon" href="/img/fenixpvsvektor.svg">
 </head>
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
@@ -34,15 +34,15 @@
                   Usluge
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
-                <li><a class="dropdown-item " href="zastita-od-pozara.html">Zaštita od požara</a></li>
-                <li><a class="dropdown-item " href="bezbednost-i-zdravlje-na-radu.html">Bezbednost i zdravlje na radu</a></li>
+                <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/zastita-od-pozara.html">Zaštita od požara</a></li>
+                <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/zastita-od-pozara.html">Bezbednost i zdravlje na radu</a></li>
             </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="kontakt.html">Kontakt</a>
+              <a class="nav-link" href="https://ngbusiness.github.io/bootstrap-sajt/kontakt.html">Kontakt</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="autor.html">Autor</a>
+              <a class="nav-link" href="https://ngbusiness.github.io/bootstrap-sajt/autor.html">Autor</a>
             </li>
             
           </ul>
@@ -68,7 +68,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row">
           <div class="col">
-            <a href="index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
