--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt="fenixpvs logo"></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt="fenixpvs logo"></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
@@ -27,22 +27,22 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Početna</a>
+              <a class="nav-link active" aria-current="page" href="https://ngbusiness.github.io/bootstrap-sajt/index.html">Početna</a>
             </li>
             <li class="nav-item dropdown p-8">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Usluge
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
-                  <li><a class="dropdown-item " href="zastita-od-pozara.html">Zaštita od požara</a></li>
-                  <li><a class="dropdown-item " href="bezbednost-i-zdravlje-na-radu.html">Bezbednost i zdravlje na radu</a></li>
+                  <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/zastita-od-pozara.html">Zaštita od požara</a></li>
+                  <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/bezbednost-i-zdravlje-na-radu.html">Bezbednost i zdravlje na radu</a></li>
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="kontakt.html">Kontakt</a>
+              <a class="nav-link" href="https://ngbusiness.github.io/bootstrap-sajt/kontakt.html">Kontakt</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="autor.html">Autor</a>
+              <a class="nav-link" href="https://ngbusiness.github.io/bootstrap-sajt/autor.html">Autor</a>
             </li>
             
           </ul>
@@ -212,7 +212,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row d-flex justify-content-center">
           <div class="col-xxl-3 col-xl-5 col-8">
-            <a href="index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
