--- a/autor.html
+++ b/autor.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="img/fenixpvsvektor.png" alt=""></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Početna</a>
+              <a class="nav-link active" aria-current="page" href="https://ngbusiness.github.io/bootstrap-sajt/index.html">Početna</a>
             </li>
             <li class="nav-item dropdown p-8">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -35,7 +35,7 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
                 <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/zastita-od-pozara.html">Zaštita od požara</a></li>
-                <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/zastita-od-pozara.html">Bezbednost i zdravlje na radu</a></li>
+                <li><a class="dropdown-item " href="https://ngbusiness.github.io/bootstrap-sajt/bezbednost-i-zdravlje-na-radu.html">Bezbednost i zdravlje na radu</a></li>
             </ul>
             </li>
             <li class="nav-item">
@@ -54,7 +54,7 @@
 <div class="container-fluid bg-success-subtle">
   <div class="row">
     <div class="col d-flex flex-column align-items-center">
-    <img src="/img/ng.jpg" alt="autor slika" class="slika my-4">
+    <img src="img/ng.jpg" alt="autor slika" class="slika my-4">
     <h1>Nikola Gajić</h1>
     <div class="linija"></div>
   </div>
