--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/img/slika-pozadina.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 <div class="carousel-caption d-none d-md-block naslov">
                     <h1>FENIX PVS</h1>
                     <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/slika-pozadina2.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina2.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 <div class="carousel-caption d-none d-md-block naslov">
                   <h1>FENIX PVS</h1>
                   <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/img/slika-pozadina3.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina3.jpg" class="d-block w-100 object-fit-cover" alt="...">
                 <div class="carousel-caption d-none d-md-block naslov">
                   <h1>FENIX PVS</h1>
                   <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
