--- a/zastita-od-pozara.html
+++ b/zastita-od-pozara.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt=""></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
@@ -89,7 +89,7 @@
 
       </div>
       <div class="modal-footer bg-success-subtle">
-        <a href="kontakt.html"><button type="button" class="btn btn-success">Kontakt</button></a>
+        <a href="https://ngbusiness.github.io/bootstrap-sajt/kontakt.html"><button type="button" class="btn btn-success">Kontakt</button></a>
         <button type="button" class="btn btn-success" data-bs-dismiss="modal">Zatvori</button>
       </div>
     </div>
@@ -103,7 +103,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row">
           <div class="col">
-            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt="logo"></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
