--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row d-flex justify-content-center">
           <div class="col-xxl-3 col-xl-5 col-8">
-            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt=""></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
