--- a/bezbednost-i-zdravlje-na-radu.html
+++ b/bezbednost-i-zdravlje-na-radu.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt=""></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt="logo"></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
