--- a/autor.html
+++ b/autor.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigacioni meni -->
      <header class="d-flex justify-content-around">
-      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="img/fenixpvsvektor.png" alt=""></a>
+      <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajtimg/fenixpvsvektor.png" alt="logo"></a>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       
       <div class="container-fluid">
@@ -68,7 +68,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row">
           <div class="col">
-            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt="logo"></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
