--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina.jpg" class="d-block w-100 object-fit-cover" alt="pozadina">
                 <div class="carousel-caption d-none d-md-block naslov">
                     <h1>FENIX PVS</h1>
                     <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina2.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina2.jpg" class="d-block w-100 object-fit-cover" alt="pozadina">
                 <div class="carousel-caption d-none d-md-block naslov">
                   <h1>FENIX PVS</h1>
                   <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina3.jpg" class="d-block w-100 object-fit-cover" alt="...">
+                <img src="https://ngbusiness.github.io/bootstrap-sajt/img/slika-pozadina3.jpg" class="d-block w-100 object-fit-cover" alt="pozadina">
                 <div class="carousel-caption d-none d-md-block naslov">
                   <h1>FENIX PVS</h1>
                   <p>Usluge Zaštite od požara i bezbednosti i zdravlja na radu</p>
@@ -212,7 +212,7 @@
       <div class="container-fluid w-75 mt-5 bg-success-subtle">
         <div class="row d-flex justify-content-center">
           <div class="col-xxl-3 col-xl-5 col-8">
-            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt=""></a>
+            <a href="https://ngbusiness.github.io/bootstrap-sajt/index.html" class="navbar-brand"><img class="logo" src="https://ngbusiness.github.io/bootstrap-sajt/img/fenixpvsvektor.png" alt="logo fenix"></a>
             <p>Matični broj: 21072567</p>
             <p>PIB: 108813646</p>
             <p>Registar privrednih subjekata kod Agencije za privredne registre: BD111915/2014;PEPDV:543817;</p>
