--- a/autor.html
+++ b/autor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="zastita od pozara, bezbednost i zdravlje na radu, obuka zop, obuka bzr, planovi evakuacije, servis protivpozarnih aparata i hidranata, autor">
-    <title>FENIX PVS - autor</title>
+    <title>FENIX PVS - Autor</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
