--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="zastita od pozara, bezbednost i zdravlje na radu, obuka zop, obuka bzr, planovi evakuacije, servis protivpozarnih aparata i hidranata">
+    <meta name="description"
+    content="Fenix PVS je firma koja se bavi oblastima zaštite od požara i bezbednosti i zdravlja na radu"/>
     <title>FENIX PVS</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
