--- a/zastita-od-pozara.html
+++ b/zastita-od-pozara.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="zastita od pozara, bezbednost i zdravlje na radu, obuka zop, obuka bzr, planovi evakuacije, servis protivpozarnih aparata i hidranata, lice za zop">
     <meta name="description"
-    content="Fenix PVS zaštita od požara "/>
+    content="Fenix PVS je firma koja pruža usluge iz zaštite od požara, lice obavljanja zaštite od požara, servisa protivpožarnih aparata i hidranata, prodajom prateće protivpožarne opreme i obukama iz oblasti zaštite od požara "/>
     <title>FENIX PVS - Zaštita od požara</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
