--- a/bezbednost-i-zdravlje-na-radu.html
+++ b/bezbednost-i-zdravlje-na-radu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="zastita od pozara, bezbednost i zdravlje na radu, obuka zop, obuka bzr, planovi evakuacije, servis protivpozarnih aparata i hidranata, lice za bzr">
     <meta name="description"
-    content="Fenix PVS bezbednost i zdravlje na radu"/>
+    content="Fenix PVS je pružalac usluga iz oblasti bezbednost i zdravlje na radu, lice za bezbednost i zdravlje na radu, takođe i obuke iz bezbednosti i zdravlja na radu pored izrade prateće dokumentacije"/>
     <title>FENIX PVS - Bezbednost i zdravlje na radu</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
